--- a/SoundbankEditor/HircItemIdConverterWindow.xaml
+++ b/SoundbankEditor/HircItemIdConverterWindow.xaml
@@ -8,10 +8,10 @@
         Title="Set Short ID" Height="135" Width="400">
     <Grid>
 		<StackPanel>
-			<Label HorizontalAlignment="Center" >New Short ID or Name</Label>
+			<Label HorizontalAlignment="Center">Short ID or Name</Label>
 			<TextBox x:Name="tbIdOrName" Width="300" />
 			<DockPanel Width="300" LastChildFill="false">
-				<Button DockPanel.Dock="Left" Width="100" Height="20" Margin="10, 10, 0, 10" Content="Save" Click="BtnSave_Click" />
+				<Button DockPanel.Dock="Left" Width="100" Height="20" Margin="10, 10, 0, 10" Content="Confirm" Click="BtnConfirm_Click" />
 				<Button DockPanel.Dock="Right" Width="100" Height="20" Margin="0, 10, 10, 10" Content="Cancel" Click="BtnCancel_Click" />
 			</DockPanel>
 		</StackPanel>
