--- a/SoundbankEditor/MainWindow.xaml
+++ b/SoundbankEditor/MainWindow.xaml
@@ -94,6 +94,10 @@
 				<DockPanel x:Name="dpHircItemEditor" Visibility="Hidden" LastChildFill="True">
 					<Label DockPanel.Dock="Top" HorizontalAlignment="Center" FontSize="16">HIRC Item Edit Options</Label>
 					<local:IndividualFieldEditorView x:Name="ifevItemId" DockPanel.Dock="Top" Margin="0,5,0,0" Title="Item ID" IsValueAShortId="True" OnEditClicked="IfevItemId_EditClicked" />
+					<DockPanel DockPanel.Dock="Top" Width="580" Height="20" Margin="0,5,0,0" LastChildFill="False">
+						<TextBlock x:Name="tbKnownValidationErrorCount" DockPanel.Dock="Left" MaxWidth="370" Text="Known Validation Error Count: " />
+						<Button x:Name="btnViewKnownValidationErrorCount" DockPanel.Dock="Right" Width="100" Height="20" Margin="5,0,0,0" Content="View Errors" Click="BtnViewKnownValidationErrorCount_Click"></Button>
+					</DockPanel>
 					<shiev:SpecificHircItemEditorView x:Name="shiev" HircItemUpdated="Shiev_HircItemUpdated" />
 				</DockPanel>
 			</Border>
