Add button to show HIRC items with known errors

--- a/SoundbankEditor/MainWindow.xaml
+++ b/SoundbankEditor/MainWindow.xaml
@@ -29,6 +29,8 @@
 				<MenuItem x:Name="btnSaveAs" Header="Save As" Click="BtnSaveAs_Click" IsEnabled="False"></MenuItem>
 				<MenuItem x:Name="btnClose" Header="Close" Click="BtnClose_Click" IsEnabled="False"></MenuItem>
 				<Separator />
+				<MenuItem x:Name="btnViewKnownValidationErrorCounts" Header="View Known Validation Error Counts" Click="BtnViewKnownValidationErrorCounts_Click" IsEnabled="False"></MenuItem>
+				<Separator />
 				<MenuItem x:Name="btnConvertBnkToJson" Header="Convert BNK to JSON" Click="BtnConvertBnkToJson_Click"></MenuItem>
 				<MenuItem x:Name="btnConvertJsonToBnk" Header="Convert JSON to BNK" Click="BtnConvertJsonToBnk_Click"></MenuItem>
 			</MenuItem>
