--- a/SoundbankEditor/MainWindow.xaml
+++ b/SoundbankEditor/MainWindow.xaml
@@ -30,6 +30,7 @@
 				<MenuItem x:Name="btnClose" Header="Close" Click="BtnClose_Click" IsEnabled="False"></MenuItem>
 				<Separator />
 				<MenuItem x:Name="btnViewKnownValidationErrorCounts" Header="View Known Validation Error Counts" Click="BtnViewKnownValidationErrorCounts_Click" IsEnabled="False"></MenuItem>
+				<MenuItem x:Name="btnImportHircItem" Header="Import HIRC Item from BNK" Click="BtnImportHircItem_Click" IsEnabled="False"></MenuItem>
 				<Separator />
 				<MenuItem x:Name="btnConvertBnkToJson" Header="Convert BNK to JSON" Click="BtnConvertBnkToJson_Click"></MenuItem>
 				<MenuItem x:Name="btnConvertJsonToBnk" Header="Convert JSON to BNK" Click="BtnConvertJsonToBnk_Click"></MenuItem>
