Add DialogueEvent editor view with ability to update Probability and GameSyncs

--- a/SoundbankEditor/SpecificHircItemEditorViews/SpecificHircItemEditorView.xaml
+++ b/SoundbankEditor/SpecificHircItemEditorViews/SpecificHircItemEditorView.xaml
@@ -39,6 +39,9 @@
 
 	<ContentPresenter Content="{Binding HircItem}">
 		<ContentPresenter.Resources>
+			<DataTemplate DataType="{x:Type hircItems:CakDialogueEvent}">
+				<local:DialogueEventHircItemEditorView HircItemUpdated="OnHircItemUpdated" />
+			</DataTemplate>
 			<DataTemplate DataType="{x:Type hircItems:CAkRanSeqCntr}">
 				<local:RandomSequenceContainerHircItemEditorView HircItemUpdated="OnHircItemUpdated" />
 			</DataTemplate>
